// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ErrorLogger /> on initialization renders page correctly with errors 1`] = `
<div>
  <styled.div
    errors={true}
    id="ErrorComponentHeader"
    onClick={[Function]}
  >
    <Styled(Icon)
      name="exclamation triangle"
      size="small"
    />
    1
     
    Error
    <styled.div
      errorDisplay={false}
    />
  </styled.div>
</div>
`;

exports[`<ErrorLogger /> on initialization renders page correctly without errors 1`] = `
<div>
  <styled.div
    errors={false}
    id="ErrorComponentHeader"
    onClick={[Function]}
  >
    No
     
    Error
    <styled.div
      errorDisplay={false}
    />
  </styled.div>
</div>
`;
